# federation

./: .eslintignore  .eslintrc  .git-blame-ignore-revs  .gitignore  .gitleaksignore  .prettierrc.js  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Contributing.md  DEVELOPMENT.md  LICENSE  README.md  RELEASING.md  RELEASING_CONNECTORS.md  ROADMAP.md  Readme.md  codecov.yml  codegen.yml  cspell-dict.txt  cspell.yml  ensure-prereqs.js  ensure-rustup.sh  grcov.sh  jest.config.base.js  lerna.json  netlify.toml  package-lock.json  package.json  prompt-update-changelogs.js  renovate.json5  tsconfig.base.json  tsconfig.build-stage-01.json  tsconfig.build-stage-03.json  tsconfig.build.json  tsconfig.json  tsconfig.test.base.json  tsconfig.test.json  update-lockfile.js  (+1 more)
atlas/: Cargo.toml  atlas.star  data.stars  readme.md
atlas/fixtures/basic/: @.gql  @.stars  admin.gql  users.gql
atlas/primer/: atlas.stars  introspection.gql
atlas/src/: core.rs  graph.rs  id.rs  layout.rs  lib.rs  node.rs  style.rs
atlas/src/errors/: code.rs  details.rs  mod.rs
cli/: .gitignore  .graphqlconfig  CONTRIBUTING.md  Cargo.toml  build.rs
cli/graphql/: agm.graphql  get_schema_query.graphql  me_query.graphql
cli/src/: cli.rs  config.rs  layout.rs  log.rs  main.rs  session.rs  style.rs  terminal.rs  version.rs
cli/src/client/: mod.rs  queries.rs
cli/src/commands/: auth.rs  login.rs  mod.rs  print.rs  setup.rs  update.rs
cli/src/errors/: code.rs  details.rs  error.rs  mod.rs
cli/src/filesystem/: download.rs  extract.rs  layout.rs  mod.rs  mover.rs
cli/src/telemetry/: mod.rs  session.rs
cli/tests/: cli-runtime.rs  cli.rs  setup.rs
cli/tests/commands/: auth.rs  mod.rs
cli/tests/utils/: mod.rs
graphql-parser/: Cargo.toml  LICENSE-MIT  README.md  build.rs
graphql-parser/benches/: graphql.rs
graphql-parser/benches/samples/: github.graphql
graphql-parser/src/: common.rs  format.rs  helpers.rs  lib.rs  name.rs  tokenizer.rs  visit.rs
graphql-parser/src/query/: ast.rs  error.rs  format.rs  grammar.rs  minified.rs  mod.rs  name.rs  refs.rs  visit.rs
graphql-parser/src/schema/: ast.rs  error.rs  format.rs  grammar.rs  mod.rs  name.rs  visit.rs
graphql-parser/tests/: directive_repeatable.graphql  fail_bad_args.graphql  fail_onion.graphql  fail_querry.graphql  helpers.rs  queries.rs  query_errors.rs  query_roundtrips.rs  schema_kitchen_sink.canonical.graphql  schema_kitchen_sink.graphql  schema_roundtrips.rs  schemas.rs  test.rs  tests.rs
graphql-parser/tests/schemas/: interface_implements.graphql
graphql-parser/tests/snapshots/: queries__directive_args.snap  queries__directive_args_win.snap  queries__fail_bad_args.snap  queries__fail_bad_args_win.snap  queries__fail_querry.snap  queries__fail_querry_win.snap  queries__fragment.snap  queries__fragment_spread.snap  queries__fragment_spread_win.snap  queries__fragment_win.snap  queries__inline_fragment.snap  queries__inline_fragment_dir.snap  queries__inline_fragment_dir_win.snap  queries__inline_fragment_win.snap  queries__kitchen-sink.snap  queries__kitchen-sink_win.snap  queries__minimal.snap  queries__minimal_mutation.snap  queries__minimal_mutation_win.snap  queries__minimal_query.snap  queries__minimal_query_win.snap  queries__minimal_win.snap  queries__mutation_directive.snap  queries__mutation_directive_win.snap  queries__named_query.snap  queries__named_query_win.snap  queries__nested_selection.snap  queries__nested_selection_win.snap  queries__query_aliases.snap  queries__query_aliases_win.snap  (+489 more)
harmonizer/: .gitignore  Cargo.toml  LICENSE  LICENSE.md  README.md  RELEASING.md  build.rs  jest.config.js  package.json  rollup.config.js  stats.html  update-lockfile.js
harmonizer/js/: do_compose.js  do_plan.js  index.mjs  runtime.js
harmonizer/src/: bin.rs  compose.rs  composition.js  do_compose.js  error.rs  js.rs  js_types.rs  lib.rs  plan.rs
internals-js/wasm/: Cargo.toml  build.sh
query-planner/: Cargo.toml  build.rs  grcov.sh
query-planner-wasm/: .gitignore  CHANGELOG.md  Cargo.toml  README.md  package-lock.json  package.json
query-planner-wasm/src/: lib.rs
query-planner/src/: autofrag.rs  builder.rs  consts.rs  context.rs  dag.rs  display.rs  federation.rs  groups.rs  helpers.rs  lib.rs  macros.rs  map.rs  model.rs  serialize.rs  visitor.rs  visitors.rs
query-planner/tests/: build-query-plan.feature  csdl.graphql  cucumber.rs  display.rs  helpers.rs  serialize.rs  temp_query.graphql  temp_query_result.json  tests.rs
router-bridge/: .gitignore  Cargo.toml  build.rs  jest.config.js  package.json  rollup.config.js  runtime.snap  tsconfig.json  tsconfig.test.json
router-bridge/bundled/: bridge.js  bridge.js.map  url_polyfill.js
router-bridge/js-dist/: do_introspect.d.ts  do_introspect.d.ts.map  do_introspect.js  do_introspect.js.map  do_plan.d.ts  do_plan.d.ts.map  do_plan.js  do_plan.js.map  index.d.ts  index.d.ts.map  index.js  index.js.map  introspection.d.ts  introspection.d.ts.map  introspection.js  introspection.js.map  plan.d.ts  plan.d.ts.map  plan.js  plan.js.map  runtime.d.ts  runtime.d.ts.map  runtime.js  runtime.js.map  types.d.ts  types.d.ts.map  types.js.map  url_polyfill.d.ts  url_polyfill.d.ts.map  url_polyfill.js  url_polyfill.js.map  utils.d.ts  utils.d.ts.map  utils.js  utils.js.map
router-bridge/js-src/: do_introspect.ts  do_plan.ts  index.ts  introspection.ts  plan.ts  runtime.js  types.ts  url_polyfill.ts
router-bridge/src/: error.rs  errors.rs  introspect.rs  js.rs  lib.rs  plan.rs
router-bridge/tests/: tests.rs
stargate/: Cargo.toml  Dockerfile
stargate/fixtures/: accounts.graphql  acephei.graphql  books.graphql  products.graphql  reviews.graphql
stargate/opentelemetry/: README.md  docker-compose.yaml  otel-collector-config.yaml  prometheus.yaml
stargate/src/: common.rs  lib.rs  main.rs  telemetry.rs
supergraph-config/: Cargo.toml
supergraph-config/src/: error.rs  lib.rs  subgraph.rs  supergraph.rs
using/: Cargo.toml
using/src/: activations.rs  bounds.rs  constants.rs  implementations.rs  lib.rs  request.rs  schema.rs  spec.rs  version.rs
(+1543 files in other folders)
