[package]
name = "apollo-cli"
version = "0.0.3"
authors = ["Apollo <opensource@apollographql.com>"]
homepage = "https://github.com/apollographql/apollo-cli"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
atty = "0.2"
console = "0.6.1"
dirs = "2.0"
env_logger = "0.7.1"
graphql-parser = { path = "../graphql-parser" }
human-panic = "1.0.3"
log = { version = "0.4", features = ["std"] }
serde = "1.0"
structopt = "0.3.14"
term_size = "0.3.0"
textwrap = "0.11.0"
thiserror = "1.0.16"

[target.'cfg(windows)'.dependencies]
winreg = "0.7"

[dev-dependencies]
assert_cmd = "0.10"
predicates = "1"
tempfile = "3"

