[package]
name = "apollo-cli"
version = "0.0.3"
authors = ["Apollo <opensource@apollographql.com>"]
homepage = "https://github.com/apollographql/apollo-cli"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
atty = "0.2"
console = "0.6.1"
dirs = "2.0"
env_logger = "0.7.1"
graphql-parser = { path = "../graphql-parser" }
human-panic = "1.0.3"
log = { version = "0.4", features = ["std"] }
openssl = { version = '0.10.26', optional = true }
reqwest = { version = "0.10", features = ["blocking", "json"] }
self_update = { version = "0.15", features = ["archive-tar", "compression-flate2"] }
semver = "0.9.0"
serde = "1.0"
structopt = "0.3.14"
tempfile = "3"
term_size = "0.3.0"
text_io = "0.1.8"
textwrap = "0.11.0"
thiserror = "1.0.16"

[target.'cfg(windows)'.dependencies]
winreg = "0.7"

[dev-dependencies]
assert_cmd = "0.10"
predicates = "1"
wiremock = "0.2.0"
async-std = { version = "1", features = ["attributes"] }

[features]
vendored-openssl = ['openssl/vendored']
