[package]
name = "apollo-cli"
version = "0.0.3"
authors = ["Apollo <opensource@apollographql.com>"]
homepage = "https://github.com/apollographql/apollo-cli"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
reqwest = { version = "0.10", features = ["blocking", "json"] }
uuid = "0.8.1"

[dependencies]
anyhow = "1.0.31"
atty = "0.2.14"
chrono = "0.4.11"
ci_info = "0.10.1"
config = "0.10.1"
console = "0.11.3"
dirs = "2.0.2"
env_logger = "0.7.1"
graphql-parser = { path = "../graphql-parser" }
graphql_client = "0.9.0"
http = "0.2.1"
human-panic = "1.0.3"
json = "0.12.4"
log = { version = "0.4.8", features = ["std"] }
openssl = { version = "0.10.29", optional = true }
reqwest = { version = "0.10.6", features = ["blocking", "json"] }
self_update = { version = "0.16.0", features = ["archive-tar", "compression-flate2"] }
semver = "0.10.0"
serde = "1.0.111"
serde_json = "1.0.53"
sha2 = "0.8.2"
structopt = "0.3.14"
tempfile = "3.1.0"
term_size = "0.3.2"
text_io = "0.1.8"
textwrap = "0.11.0"
thiserror = "1.0.19"
toml = "0.5.6"
uuid = "0.8.1"

[target.'cfg(windows)'.dependencies]
winreg = "0.7.0"

[dev-dependencies]
assert_cmd = "1.0.1"
predicates = "1.0.4"
wiremock = "0.2.2"
async-std = { version = "1.6.0", features = ["attributes"] }

[features]
vendored-openssl = ["openssl/vendored"]
