[package]
name = "graphql-parser"
description = """
    A parser, AST and serializer for graphql query language and scheme
    definition language (sometimes called IDL).
"""
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = ["graphql", "parser"]
categories = ["parser-implementations", "command-line-interface"]
homepage = "https://github.com/graphql-rust/graphql-parser"
documentation = "https://docs.rs/graphql-parser"
version = "0.3.0"
authors = ["Paul Colomiets <paul@colomiets.name>"]
edition = "2018"

[dependencies]
combine = "3.8.1"
thiserror = "1.0.20"
bytecount = "0.6.0"
ordered-float = "2.0.0"

[dev-dependencies]
pretty_assertions = "0.6.1"
insta = "0.16.1"
paste = "0.1.18"
