[package]
name = "harmonizer"
version = "0.33.4"
authors = [ "Apollo Graph, Inc. <packages@apollographql.com>" ]
edition = "2018"
description = "Apollo Federation utility to compose a supergraph from subgraphs"
homepage = "https://www.apollographql.com/apollo-federation/"
documentation = "https://apollographql.com/docs/federation/"
repository = "https://github.com/apollographql/federation/"
license = "MIT"
readme = "README.md"
include = [ "dist/**/*", "js/**/*", "src/**/*", "Cargo.toml" ]

[lib]
name = "harmonizer"
path = "src/lib.rs"

[dependencies]
deno_core = "0.86.0"
fed-types = { git = "https://github.com/apollographql/rover", branch = "avery/build-rover-fed-bin" }
serde_json = "1"
supergraph-config = { git = "https://github.com/apollographql/rover", branch = "avery/build-rover-fed-bin" }

[dependencies.serde]
version = "1.0"
features = [ "derive" ]

[dev-dependencies]
insta = "1.8.0"

[build-dependencies]
which = "4.2.2"
