[package]
name = "query-planner-wasm"
version = "0.0.1" # keep in sync with package.json
authors = ["Apollo <opensource@apollographql.com>"]
homepage = "https://github.com/apollographql/rust"
description = "Bridge code written in Rust to Javascript/Typescript, to be internally used by Apollo Gateway. This package is not meant to be independently consumed."
edition = "2018"
license = "MIT/Apache-2.0"
repository = "https://github.com/apollographql/rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type=["cdylib"]

[dependencies]
apollo-query-planner = { path = "../query-planner" }
wasm-bindgen = { version = "0.2.67", features = ["serde-serialize"] }
js-sys = "0.3.44"

[dev-dependencies]
wasm-bindgen-test = "0.3.17"
serde = { version = "1.0.115", features = ["derive"] }
serde_json = "1.0.57"
