[package]
name = "query-planner-wasm" # this ends up being the name in the published npm package.
version = "0.0.0-DO.NOT.CHANGE" # The version is managed in the package.json, by Lerna.
authors = ["Apollo <opensource@apollographql.com>"]
homepage = "https://github.com/apollographql/federation"
description = "Bridge code written in Rust to Javascript/Typescript, to be internally used by Apollo Gateway. This package is not meant to be independently consumed."
edition = "2018"
license = "MIT"
repository = "https://github.com/apollographql/federation"
keywords = ["GraphQL", "rust", "wasm", "apollo"]
publish = false

[lib]
crate-type=["cdylib"]

[dependencies]
# workspace
apollo-query-planner = { path = "../query-planner" }

# 3rd party
wasm-bindgen = { version = "0.2.69", features = ["serde-serialize"] }
js-sys = "0.3.0"

[dev-dependencies]
wasm-bindgen-test = "0.3.18"
serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0.64"
