[package]
name = "apollo-query-planner"
version = "0.0.3"
authors = ["Apollo <opensource@apollographql.com>"]
homepage = "https://github.com/apollographql/federation"
edition = "2018"
license = "MIT/Apache-2.0"
repository = "https://github.com/apollographql/federation"

[dependencies]
# workspace
graphql-parser = { path = "../graphql-parser" }

# 3rd party
derive_builder = "0.9.0"
lazy_static = "1.4.0"
linked-hash-map = "0.5.3"
serde = { version = "1.0.116", features = ["derive"] }
serde_json = "1.0.57"

[dev-dependencies]
gherkin_rust = "0.8.3"
