[package]
name = "apollo-query-planner"
version = "0.0.4"
authors = ["Apollo <opensource@apollographql.com>"]
homepage = "https://github.com/apollographql/federation"
edition = "2018"
license = "MIT"
repository = "https://github.com/apollographql/federation"

[dependencies]
# workspace
graphql-parser = { path = "../graphql-parser" }

# 3rd party
derive_builder = "0.9.0"
lazy_static = "1.4.0"
linked-hash-map = "0.5.0"
serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0.64"
tracing = "0.1.0"
tracing-futures = "0.2.4"

[dev-dependencies]
gherkin_rust = "0.8.3"

[build-dependencies]
harmonizer = { path = "../harmonizer" }
