[package]
name = "apollo-query-planner"
version = "0.0.4"
authors = ["Apollo <opensource@apollographql.com>"]
homepage = "https://github.com/apollographql/federation"
edition = "2018"
license = "MIT"
repository = "https://github.com/apollographql/federation"

[dependencies]
# workspace
graphql-parser = { path = "../graphql-parser" }
# TODO(jesse) Update this to core-schema.
# using = { path = "../using" }

# 3rd party
derive_builder = "0.9.0"
lazy_static = "1.4.0"
linked-hash-map = "0.5.3"
serde = { version = "1.0.124", features = ["derive"] }
serde_json = "1.0.64"
thiserror = "1.0.23"
tracing = "0.1.21"
tracing-futures = "0.2.4"

[dev-dependencies]
insta = "1.5.2"
serde_json = "1.0.59"


[build-dependencies]
# workspace build deps
harmonizer = { path = "../harmonizer" }

# 3rd party
gherkin_rust = "0.8.3"
serde_json = "1.0.59"



