[package]
name = "router-bridge"
version = "0.1.0"
authors = ["Apollo <packages@apollographql.com>"]
edition = "2018"
description = "JavaScript bridge for the Apollo Router"
homepage = "https://www.apollographql.com/apollo-federation/"
documentation = "https://apollographql.com/docs/federation/"
repository = "https://github.com/apollographql/federation/"
license-file = "./LICENSE"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

include = ["js-dist/**/*", "bundled/**/*", "src/**/*", "Cargo.toml"]

[dependencies]
anyhow = "1.0.44"
deno_core = "0.118.0"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
thiserror = "1.0.30"

[dev-dependencies]
insta = "1.8.0"

[build-dependencies]
deno_core = "0.118.0"
which = "4.2.2"
