[package]
name = "stargate"
version = "0.1.0"
authors = ["Apollo <opensource@apollographql.com>"]
homepage = "https://github.com/apollographql/federation"
edition = "2018"
license = "MIT"
repository = "https://github.com/apollographql/federation"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# workspace
apollo-stargate-lib = { path = "crates/stargate-lib" }

# 3rd party
actix-cors = "0.4.1"
actix-service = "1.0.6"
actix-web = "3.3.2"
actix-web-opentelemetry = "0.10.0"
env_logger = "0.8.0"
futures = "0.3.0"
http = "0.2.0"
opentelemetry = "0.8.0"
opentelemetry-jaeger = { version = "0.7.0", features = ["collector_client"] }
thrift = "0.13.0"
tracing = "0.1.0"
tracing-actix-web = "0.2.1"
tracing-bunyan-formatter = "0.1.0"
tracing-futures = "0.2.4"
tracing-log = { version = "0.1.1", features = ["env_logger"] }
tracing-opentelemetry = "0.7.0"
tracing-subscriber = "0.2.0"