[package]
name = "federation-internals-wasm"
version = "0.1.0"
authors = ["The Apollo GraphQL Contributors"]
edition = "2021"
license = "Elastic-2.0"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
apollo-compiler = "1.0.0-beta.16"
apollo-federation = {path = "../../../router/apollo-federation"}
js-sys = "0.3.69"
line-col = "0.2.1"
wasm-bindgen = "0.2.92"
