[package]
name = "federation-internals-wasm"
version = "0.1.0"
authors = ["The Apollo GraphQL Contributors"]
edition = "2021"
license = "Elastic-2.0"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
apollo-compiler = "1.0.0-beta.16"
#apollo-federation = {path = "../../../router/apollo-federation"}
apollo-federation = {git = "https://github.com/apollographql/router", branch = "dylan/validate-connectors"}
js-sys = "0.3.69"
line-col = "0.2.1"
wasm-bindgen = "0.2.92"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "deny", priority = -2 }
pedantic = { level = "deny", priority = -1 }
must_use_candidate = "allow" # #[wasm_bindgen] functions are not used in Rust

# Don't panic!
panic = "deny"
exit = "deny"
unimplemented = "deny"
todo = "deny"
expect_used = "deny"
unwrap_used = "deny"
indexing_slicing = "deny"
missing_panics_doc = "forbid"