[package]
name = "apollo-stargate-lib"
version = "0.1.0"
authors = ["Apollo <opensource@apollographql.com>"]
homepage = "https://github.com/apollographql/federation"
edition = "2018"
license = "MIT"
repository = "https://github.com/apollographql/federation"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Workspace
apollo-query-planner = { path = "../query-planner" }
graphql-parser = { path = "../graphql-parser" }

# 3rd party
async-trait = "0.1.41"
futures = "0.3.7"
http = "0.2.1"
reqwest = { version = "0.10.8", features = ["json"] }
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.59"
structopt = "0.3.20"
tracing = "0.1.21"
tracing-futures = "0.2.4"
url = "2.1.1"

[dev-dependencies]
tokio = { version = "1.1.0", features = ["macros"]}
wiremock = "0.3"
