[package]
name = "apollo-stargate-actix-web"
version = "0.1.0"
authors = ["Apollo <opensource@apollographql.com>"]
homepage = "https://github.com/apollographql/federation"
edition = "2018"
license = "MIT"
repository = "https://github.com/apollographql/federation"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# workspace
apollo-stargate = { path = "../.." }

# 3rd party
actix-cors = "0.3.0"
actix-web = "3.0.2"
futures = "0.3.5"
env_logger = "0.7.1"
serde_json = "1.0.57"
log = "0.4.11"
