[package]
name = "apollo-stargate-tide"
version = "0.1.0"
authors = ["Apollo <opensource@apollographql.com>"]
homepage = "https://github.com/apollographql/federation"
edition = "2018"
license = "MIT"
repository = "https://github.com/apollographql/federation"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# workspace
apollo-stargate = { path = "../.." }

# 3rd party
async-std = { version = "1.6.0", features = ["attributes"] }
async-trait = "0.1.40"
http-types = "2.4.0"
tide = "0.13.0"
tide-compress = "0.5.0"
